<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.cvx4u.cvx.ElectionCalendar">

    <Button
        android:id="@+id/mainMenu"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/button_MainMenu"
        android:textAllCaps="false"
        android:textColor="#b9bff8"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

    <Button
        android:id="@+id/help"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="#b9bff8"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectStates"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/electionCal_selectState"
        android:textAllCaps="false"
        android:textColor="#b9bff8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/electionCal_instructions"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <ListView
        android:id="@+id/electionCalendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/welcomeWindow"
        android:layout_width="334dp"
        android:layout_height="487dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/candidateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/american_typewriter_regular"
            android:text="@string/electionCalWelcome"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeDescription"
            android:layout_width="290dp"
            android:layout_height="365dp"
            android:layout_marginTop="8dp"
            android:text="@string/electionCalDescription"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHeader" />

        <Button
            android:id="@+id/welcomeDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:text="@string/done"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
