<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.cvx4u.cvx.VoterRegistrationInfo">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="68dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/kadwa_bold"
        android:text="@string/button_home"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kadwa_bold"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:lineSpacingMultiplier=".7"
        android:text="@string/registration_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registration_description"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ListView
        android:id="@+id/registrationInfo"
        android:layout_width="368dp"
        android:layout_height="431dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </ListView>
</android.support.constraint.ConstraintLayout>
