<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.cvx4u.cvx.MeetYourGovernment">

    <Button
        android:id="@+id/searchButton"
        android:layout_width="95dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/search"
        android:textAllCaps="@bool/textAllCapsNo"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goHomeButton"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/goHome"
        android:textAllCaps="@bool/textAllCapsNo"
        android:textColor="@android:color/background_light"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jumpToOffice"
        android:layout_width="101dp"
        android:layout_height="17dp"
        android:background="@android:color/transparent"
        android:text="@string/jumpToOffice"
        android:textAllCaps="@bool/textAllCapsNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <ListView
        android:id="@+id/representativeListing"
        android:layout_width="358dp"
        android:layout_height="477dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jumpToOffice">

    </ListView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/representSearchWindow"
        android:layout_width="288dp"
        android:layout_height="279dp"
        android:background="@color/search_window_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/repFinderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/american_typewriter_regular"
            android:text="@string/repFinder_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/repFinderDesc"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repFinderTitle" />

        <TextView
            android:id="@+id/addressInvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/addressInvalid"
            android:textColor="?attr/colorError"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressInput" />

        <Spinner
            android:id="@+id/stateSelector"
            android:layout_width="254dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repFinderDesc" />

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="215dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:imeOptions="actionSearch"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repFinderDesc" />

        <Button
            android:id="@+id/repCancelButton"
            android:layout_width="87dp"
            android:layout_height="25dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAllCaps="@bool/textAllCapsNo"
            app:layout_constraintTop_toBottomOf="@+id/repFinderDesc"
            tools:layout_editor_absoluteX="5dp" />

        <Button
            android:id="@+id/repSearchButton"
            android:layout_width="84dp"
            android:layout_height="23dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/transparent"
            android:text="@string/search"
            android:textAllCaps="@bool/textAllCapsNo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repFinderDesc" />

        <Button
            android:id="@+id/stateLocalSwitch"
            android:layout_width="236dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="Button"
            android:textAllCaps="@bool/textAllCapsNo"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repCancelButton" />


        <Button
            android:id="@+id/goToMainMenu"
            android:layout_width="90dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/button_MainMenu"
            android:textAllCaps="@bool/textAllCapsNo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateLocalSwitch" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loadingWindow"
        android:layout_width="118dp"
        android:layout_height="113dp"
        android:layout_marginTop="185dp"
        android:background="@color/candidateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/american_typewriter_regular"
            android:text="@string/loading"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
