<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:textAlignment="viewStart"
    tools:context="com.cvx4u.cvx.HomeScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="396dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cvxheadbanner" />

    <ListView
        android:id="@+id/followUpdates"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="363dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeMeetGovt"
            android:layout_width="239dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/kadwa_bold"
            android:padding="2dp"
            android:text="@string/homeMeetGovt"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:typeface="normal"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/homeTrackLegis"
            android:layout_width="238dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/kadwa_bold"
            android:padding="0dp"
            android:text="@string/homeTrackLegis"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeMeetGovt" />

        <Button
            android:id="@+id/homeFeedback"
            android:layout_width="82dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/kadwa_bold"
            android:minHeight="0dp"
            android:padding="0dp"
            android:paddingVertical="0dp"
            android:text="@string/homeFeedback"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeUpcomingVotes2" />

        <Button
            android:id="@+id/homeVoteReg"
            android:layout_width="238dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/kadwa_bold"
            android:padding="2dp"
            android:text="@string/homeVoteReg"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTrackLegis" />

        <Button
            android:id="@+id/homeUpcomingVotes2"
            android:layout_width="238dp"
            android:layout_height="27dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/kadwa_bold"
            android:padding="0dp"
            android:text="@string/homeUpcomingVotes"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeVoteReg" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loadingWindow"
        android:layout_width="118dp"
        android:layout_height="113dp"
        android:layout_marginTop="185dp"
        android:background="@color/candidateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/american_typewriter_regular"
            android:text="@string/loading"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
