<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.cvx4u.cvx.ShowCandidates">

    <Button
        android:id="@+id/backToCalendar"
        android:layout_width="123dp"
        android:layout_height="25dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/back_to_calendar"
        android:textAllCaps="@bool/textAllCapsNo"
        android:textColor="@color/search_window_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loadingWindow"
        android:layout_width="118dp"
        android:layout_height="113dp"
        android:layout_marginTop="185dp"
        android:background="@color/candidateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/american_typewriter_regular"
            android:text="@string/loading"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/candidatesFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/american_typewriter_regular"
        android:text="@string/candidates_for"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/electionName"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/american_typewriter_regular"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidatesFor" />

    <ListView
        android:id="@+id/candidateList"
        android:layout_width="336dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electionName" />
</android.support.constraint.ConstraintLayout>
